--- a/cleaning.ipynb
+++ b/cleaning.ipynb
@@ -225,7 +225,7 @@
     }
    ],
    "source": [
-    "trees = pd.read_csv(\"2015_Street_Tree_Census_-_Tree_Data.csv\")\n",
+    "trees = pd.read_csv(\"data/2015_Street_Tree_Census_-_Tree_Data.csv\")\n",
     "trees.head()"
    ]
   },
@@ -249,14 +249,6 @@
    "source": [
     "trees.shape"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cd40be2e-15f8-4045-be4a-cc219bbd3c41",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -2043,19 +2035,11 @@
    "source": [
     "particulates"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6d454e68-9f24-4b84-ba35-728af06be9f8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -2069,7 +2053,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
   }
  },
  "nbformat": 4,
